--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "linkedin-endorsor",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "LinkedIn Automated Endorsor",
   "main": "index.js",
   "dependencies": {
     "bluebird": "^3.0.6",
     "colors": "^1.1.2",
+    "config": "^1.17.1",
     "debug": "^2.2.0",
     "promise-class": "^0.0.4",
     "request-promise": "^1.0.2"
