--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "linkedin-endorsor",
+  "name": "linkedin-endorser",
   "version": "1.0.2",
   "description": "LinkedIn Automated Endorsor",
   "main": "index.js",
